--- a/geronimo-javamail_1.6/geronimo-javamail_1.6_provider/pom.xml
+++ b/geronimo-javamail_1.6/geronimo-javamail_1.6_provider/pom.xml
@@ -33,28 +33,36 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-activation_1.1_spec</artifactId>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.core</artifactId>
+            <version>4.2.0</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.compendium</artifactId>
+            <version>4.2.0</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-javamail_1.5_spec</artifactId>
-            <exclusions>
-                <exclusion>
-                    <artifactId>apache-mime4j-core</artifactId>
-                    <groupId>org.apache.james</groupId>
-                </exclusion>
-            </exclusions>
+            <artifactId>geronimo-osgi-locator</artifactId>
+            <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.apache.james</groupId>
             <artifactId>apache-james-imap-processor</artifactId>
